--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-tab-view": "^4.0.10",
     "react-native-vector-icons": "^10.2.0"
   },
